Correctly display word-lists so they don't break incorrectly

--- a/client/src/app/contextpack/contextpack-card.component.scss
+++ b/client/src/app/contextpack/contextpack-card.component.scss
@@ -15,7 +15,7 @@ font-size: 16px;
 .contextpack-card-name {
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 
 mat-card-footer{
@@ -30,6 +30,7 @@ mat-card-footer{
   margin: 10px;
   font-size: 14px;
   background-color: #b6b5b5;
+  border-radius: 30px;
 }
 
 h1{
@@ -47,19 +48,14 @@ h3{
   font-size: 20px;
 }
 
-.display-word{
-  white-space: pre;
-}
-.mat-card {
-  border-radius: 30px;
-}
-
 .bubble{
   padding: 4px 4px 4px 6px;
   background-color: #2196f3;
   color: white;
   border-radius: 10px;
   // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  display: inline;
+  display: inline-block;
   margin: 2px;
+  white-space: nowrap;
+  line-height: normal;
 }
