--- a/client/src/app/contextpack/contextpack-list.component.scss
+++ b/client/src/app/contextpack/contextpack-list.component.scss
@@ -5,7 +5,7 @@
 }
 
 .packs-card{
-  width: 100%;
+  height: fit-content;
   margin: 10px;
   box-shadow: 10px 5px 5px #64ceff;
 }
